--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -47,4 +49,31 @@ dependencies {
 
     // Lottie - https://github.com/airbnb/lottie-android
     implementation "com.airbnb.android:lottie:4.2.1"
+
+    // Hilt - https://developer.android.com/training/dependency-injection/hilt-android?hl=ko
+    implementation "com.google.dagger:hilt-android:2.39.1"
+    kapt "com.google.dagger:hilt-android-compiler:2.39.1"
+    // Hilt with ViewModel - https://developer.android.com/training/dependency-injection/hilt-jetpack?hl=ko#viewmodels
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
+    // When using Kotlin.
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+    // Hilt With WorkManager - https://developer.android.com/training/dependency-injection/hilt-jetpack?hl=ko#viewmodels
+    implementation 'androidx.hilt:hilt-work:1.0.0'
+    // When using Kotlin.
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+    // When using Java.
+    annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0'
+
+
+    // Room - https://developer.android.com/training/data-storage/room?hl=ko
+    implementation "androidx.room:room-runtime:$roomVersion"
+    annotationProcessor "androidx.room:room-compiler:$roomVersion"
+    // To use Kotlin annotation processing tool (kapt)
+    kapt("androidx.room:room-compiler:$roomVersion")
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation("androidx.room:room-ktx:$roomVersion")
+
+    // WorkManager - https://developer.android.com/topic/libraries/architecture/workmanager/basics?hl=ko
+    // Kotlin + coroutines
+    implementation("androidx.work:work-runtime-ktx:$work_version")
 }
