--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,8 +61,8 @@ dependencies {
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
     // Hilt With WorkManager - https://developer.android.com/training/dependency-injection/hilt-jetpack?hl=ko#viewmodels
     implementation 'androidx.hilt:hilt-work:1.0.0'
-    // When using Java.
-    annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0'
+    // When using Kotlin.
+    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
 
 
     // Room - https://developer.android.com/training/data-storage/room?hl=ko
@@ -80,4 +80,16 @@ dependencies {
     // Coroutine -https://github.com/Kotlin/kotlinx.coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
+
+    // androidx.fragment - https://developer.android.com/jetpack/androidx/releases/fragment#1.4.0
+    def fragment_version = "1.4.0"
+    implementation("androidx.fragment:fragment-ktx:$fragment_version")
+
+    // Lifecycle - https://developer.android.com/jetpack/androidx/releases/lifecycle?hl=ko
+    def lifecycle_version = "2.4.0"
+    // ViewModel
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
+    // LiveData
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
+
 }
