--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.EasyO.pairalarm"
+        applicationId "com.easyo.pairalarm"
         minSdk 26
         targetSdk 31
         versionCode 1
@@ -62,10 +62,10 @@ dependencies {
     // Hilt With WorkManager - https://developer.android.com/training/dependency-injection/hilt-jetpack?hl=ko#viewmodels
     implementation 'androidx.hilt:hilt-work:1.0.0'
     // When using Kotlin.
-    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
-
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
 
     // Room - https://developer.android.com/training/data-storage/room?hl=ko
+    def roomVersion = "2.4.0-alpha05"
     implementation "androidx.room:room-runtime:$roomVersion"
     annotationProcessor "androidx.room:room-compiler:$roomVersion"
     // To use Kotlin annotation processing tool (kapt)
@@ -75,6 +75,7 @@ dependencies {
 
     // WorkManager - https://developer.android.com/topic/libraries/architecture/workmanager/basics?hl=ko
     // Kotlin + coroutines
+    def work_version = "2.7.1"
     implementation("androidx.work:work-runtime-ktx:$work_version")
 
     // Coroutine -https://github.com/Kotlin/kotlinx.coroutines
