--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.EasyO.pairalarm"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.easyo.pairalarm">
 
     <application
-        android:name=".AppClass"
+        android:name="com.easyo.pairalarm.AppClass"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PairAlarm">
         <activity
-            android:name=".ui.activity.InitialActivity"
+            android:name="com.easyo.pairalarm.ui.activity.InitialActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,8 +21,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
-            android:exported="false">
+            android:name="com.easyo.pairalarm.MainActivity"
+            android:exported="true">
         </activity>
         <provider
             android:name="androidx.startup.InitializationProvider"
