--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         </activity>
         <activity
             android:name="com.easyo.pairalarm.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.PairAlarm.NoActionBar">
         </activity>
         <provider
             android:name="androidx.startup.InitializationProvider"
