set FAB in alarmFragment(only UI)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PairAlarm">
+        android:theme="@style/Theme.PairAlarm"
+        tools:replace="android:theme">
         <activity
             android:name="com.easyo.pairalarm.ui.activity.InitialActivity"
             android:exported="true" >
