building MakeAlarmActivity(not complete)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.easyo.pairalarm">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
     <application
-        android:name="com.easyo.pairalarm.AppClass"
+        android:name=".AppClass"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,8 +22,11 @@
         android:theme="@style/Theme.PairAlarm"
         tools:replace="android:theme">
         <activity
-            android:name="com.easyo.pairalarm.ui.activity.InitialActivity"
-            android:exported="true" >
+            android:name="com.EasyO.pairalarm.ui.activity.MakeAlarmActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.InitialActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,10 +34,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.easyo.pairalarm.MainActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.PairAlarm.NoActionBar">
+
         </activity>
+
         <provider
             android:name="androidx.startup.InitializationProvider"
             android:authorities="${applicationId}.androidx-startup"
