--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,15 +97,17 @@ dependencies {
     implementation 'androidx.activity:activity-ktx:1.4.0'
 
     // Lifecycle - https://developer.android.com/jetpack/androidx/releases/lifecycle?hl=ko
-    def lifecycle_version = "2.4.0"
-    // ViewModel
-    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
-    // LiveData
-    implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
+    implementation "androidx.lifecycle:lifecycle-livedata-core-ktx:2.5.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:2.5.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-alpha02"
 
     // 커스텀 FAB
     implementation(files("libs/customFloating-release.aar"))
 
     // FitButton - https://github.com/nikartm/FitButton
     implementation 'io.github.nikartm:fit-button:2.0.0'
+
+
 }
