--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,22 +2,22 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'dagger.hilt.android.plugin'
+    id("com.google.dagger.hilt.android")
 }
 
 android {
-    compileSdk 31
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.easyo.pairalarm"
         minSdk 26
-        targetSdk 31
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-    buildFeatures{
+    buildFeatures {
         viewBinding = true
         dataBinding = true
     }
@@ -41,38 +41,35 @@ android {
             jniLibs.srcDirs = ['libs']
         }
     }
+    namespace 'com.easyo.pairalarm'
 }
-
 
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation 'junit:junit:'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
     // Lottie - https://github.com/airbnb/lottie-android
-    implementation "com.airbnb.android:lottie:4.2.1"
+    implementation "com.airbnb.android:lottie:5.2.0"
 
     // Hilt - https://developer.android.com/training/dependency-injection/hilt-android?hl=ko
-    implementation "com.google.dagger:hilt-android:2.39.1"
-    kapt "com.google.dagger:hilt-android-compiler:2.39.1"
-    // Hilt with ViewModel - https://developer.android.com/training/dependency-injection/hilt-jetpack?hl=ko#viewmodels
-    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
+    implementation("com.google.dagger:hilt-android:2.44")
+    kapt("com.google.dagger:hilt-android-compiler:2.44")
+    implementation("androidx.hilt:hilt-work:1.0.0")
     // When using Kotlin.
-    kapt 'androidx.hilt:hilt-compiler:1.0.0'
-    // Hilt With WorkManager - https://developer.android.com/training/dependency-injection/hilt-jetpack?hl=ko#viewmodels
-    implementation 'androidx.hilt:hilt-work:1.0.0'
-    // When using Kotlin.
-    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+    kapt("androidx.hilt:hilt-compiler:1.0.0")
+    // When using Java.
+    annotationProcessor("androidx.hilt:hilt-compiler:1.0.0")
 
     // Room - https://developer.android.com/training/data-storage/room?hl=ko
-    def roomVersion = "2.4.0-alpha05"
+    def roomVersion = "2.5.0-beta02"
     implementation "androidx.room:room-runtime:$roomVersion"
     annotationProcessor "androidx.room:room-compiler:$roomVersion"
     // To use Kotlin annotation processing tool (kapt)
@@ -86,22 +83,22 @@ dependencies {
     implementation("androidx.work:work-runtime-ktx:$work_version")
 
     // Coroutine -https://github.com/Kotlin/kotlinx.coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
 
     // androidx.fragment - https://developer.android.com/jetpack/androidx/releases/fragment#1.4.0
-    def fragment_version = "1.4.0"
+    def fragment_version = "1.5.4"
     implementation("androidx.fragment:fragment-ktx:$fragment_version")
 
     // androidx.activity - https://developer.android.com/jetpack/androidx/releases/activity?hl=ko
-    implementation 'androidx.activity:activity-ktx:1.4.0'
+    implementation 'androidx.activity:activity-ktx:1.6.1'
 
     // Lifecycle - https://developer.android.com/jetpack/androidx/releases/lifecycle?hl=ko
-    implementation "androidx.lifecycle:lifecycle-livedata-core-ktx:2.5.0-alpha02"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-alpha02"
-    implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:2.5.0-alpha02"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-alpha02"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-livedata-core-ktx:2.6.0-alpha03"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.0-alpha03"
+    implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:2.6.0-alpha03"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.0-alpha03"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0-alpha03"
 
     // Groupie - https://github.com/lisawray/groupie
     implementation "com.github.lisawray.groupie:groupie:$groupie_version"
@@ -116,4 +113,8 @@ dependencies {
 
     // timber - https://github.com/JakeWharton/timber.git
     implementation 'com.jakewharton.timber:timber:5.0.1'
+}
+
+kapt {
+    correctErrorTypes = true
 }
