Receiver 클래스 이름 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
         </activity>
 
         <receiver
-            android:name=".broadcast.MyReceiver"
+            android:name=".broadcast.AlarmReceiver"
             android:exported="true">
             <intent-filter>
                 <action android:name="com.easyo.pairalarm" />
