다크모드 해제 및 상태표시줄, 앱바 표시 수정 1. 강제 다크모드 해제 2. 알람 울릴 때 앱바 표시 안되게 설정 3. 상태표시줄을 배경색과 동일하게 설정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,10 @@
         >
         <activity
             android:name=".ui.activity.OnAlarmActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:launchMode="singleTask"
+            android:theme="@style/Theme.PairAlarm.NoActionBar"
+            />
         <activity
             android:name=".ui.activity.NormalAlarmSetActivity"
             android:exported="false"
