LicenseToolsPlugin 사용을 위한 의존성 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,8 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id("com.google.dagger.hilt.android")
+    id "com.google.dagger.hilt.android"
+    id "com.cookpad.android.plugin.license-tools"
 }
 
 android {
@@ -52,9 +53,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     // Lottie - https://github.com/airbnb/lottie-android
     implementation "com.airbnb.android:lottie:5.2.0"
