--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,13 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        maven { url "https://jitpack.io" }
+        maven {url "https://jitpack.io"}
+        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.3.1'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.20'
+        classpath "gradle.plugin.com.cookpad.android.plugin:plugin:1.2.8"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
