잠금 화면 위에 액티비티 띄우기

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
             android:name=".ui.activity.OnAlarmActivity"
             android:exported="false"
             android:launchMode="singleTask"
+            android:showOnLockScreen="true"
+            android:excludeFromRecents="true"
             android:theme="@style/Theme.PairAlarm.NoActionBar"
             />
         <activity
