--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
 
     <application
         android:name=".AppClass"
@@ -26,6 +27,7 @@
             android:exported="false" />
         <activity
             android:name=".ui.activity.OnAlarmActivity"
+            android:permission="android.permission.SYSTEM_ALERT_WINDOW"
             android:excludeFromRecents="true"
             android:exported="false"
             android:launchMode="singleTask"
@@ -52,7 +54,9 @@
         <activity
             android:name=".ui.activity.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.PairAlarm.NoActionBar"></activity>
+            android:theme="@style/Theme.PairAlarm.NoActionBar">
+
+        </activity>
 
         <receiver
             android:name=".broadcast.AlarmReceiver"
