--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:name=".AppClass"
@@ -23,6 +23,9 @@
         android:theme="@style/Theme.PairAlarm"
         tools:replace="android:theme">
         <activity
+            android:name=".ui.activity.UserGuideActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.activity.DebugActivity"
             android:exported="false" />
         <activity
@@ -30,10 +33,10 @@
             android:exported="false" />
         <activity
             android:name=".ui.activity.OnAlarmActivity"
-            android:permission="android.permission.SYSTEM_ALERT_WINDOW"
             android:excludeFromRecents="true"
             android:exported="false"
             android:launchMode="singleTask"
+            android:permission="android.permission.SYSTEM_ALERT_WINDOW"
             android:showOnLockScreen="true"
             android:theme="@style/Theme.PairAlarm.NoActionBar" />
         <activity
@@ -48,8 +51,7 @@
             android:name=".ui.activity.SplashActivity"
             android:exported="false"
             android:launchMode="singleTask"
-            android:theme="@style/Theme.PairAlarm.NoActionBar">
-        </activity>
+            android:theme="@style/Theme.PairAlarm.NoActionBar" />
         <activity
             android:name=".ui.activity.MainActivity"
             android:exported="true"
@@ -71,7 +73,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
 
                 <action android:name="com.easyo.pairalarm" />
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.i테ntent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.QUICKBOOT_POWERON" />
                 <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED" />
                 <action android:name="android.intent.action.REBOOT" />
